# libv4l2cam

./: ProjectHome.md
libv4l2cam/: Makefile  libcam.cpp  libcam.h
libv4l2cam/ocv/: test  test.cpp  two  two.cpp
libv4l2cam/simple/: Makefile  two.cpp
pcloud/: camcalibbase.cpp  main.cpp
pcloud/deb/DEBIAN/: control
ros/: setup.sh
ros/stereocam/: CMakeLists.txt  README  manifest.xml
ros/stereocam/src/: camcalib.cpp  camcalib.h  libcam.cpp  pointcloud.cpp  pointcloud.h  polynomial.h  rectify.cpp  rectify.h  stereo.cpp  stereocam_broadcast.cpp  stereocam_subscribe.cpp  stereodense.cpp  stereodense.h
ros/stereocam/src/elas/: triangle.cpp
ros/stereocamera/: edit.sh  manifest.xml  stereocamera.launch
ros/stereocamera/src/: stereocamera_broadcast.cpp
trunk/: README  libcam.cpp
trunk/libv4l2cam/: libcam.cpp  libcam.h  test.cpp
trunk/libv4l2cam/ocv/: Makefile  test.cpp  two.cpp
trunk/libv4l2cam/simple/: test.cpp
trunk/ocv/: Makefile  test.cpp  two.cpp
trunk/pcloud/: camcalibbase.cpp  camcalibbase.h  main.cpp
trunk/ros/stereocam/: CMakeLists.txt  README  manifest.xml  stereocam.launch
trunk/ros/stereocam/src/: camcalib.cpp  camcalib.h  libcam.cpp  libcam.h  pointcloud.cpp  pointcloud.h  polynomial.cpp  stereo.h  stereocam_broadcast.cpp  stereocam_subscribe.cpp  stereodense.h
trunk/ros/stereocam/srv/: camera_active.srv  stereocam_params.srv
trunk/ros/stereocamera/: CMakeLists.txt  calibrate.sh  mainpage.dox
trunk/ros/stereocamera/src/: stereocamera_broadcast.cpp
trunk/v4l2stereo/: .cproject  Makefile  README  camcalib.cpp  camcalib.h  fast.cpp  fast.h  libcam.cpp  linefit.cpp  main.cpp  makepackage.sh  motionmodel.cpp  motionmodel.h  pointcloud.cpp  pointcloud.h  stereo.cpp  stereo.h  stereodense.cpp  stereodense.h  v4l2stereo.deb
trunk/v4l2stereo/Debug/: makefile  subdir.mk
trunk/v4l2stereo/calibration/: CvexStereoCameraCalibration.cpp
trunk/v4l2stereo/deb/DEBIAN/: control
trunk/v4l2stereo/elas/: descriptor.h  elas.cpp
v4l2stereo/: .cproject  Makefile  README  camcalib.cpp  camcalib.h  drawing.cpp  fast.cpp  fast.h  libcam.cpp  libcam.h  linefit.h  main.cpp  motionmodel.cpp  motionmodel.h  pointcloud.cpp  pointcloud.h  stereo.cpp  stereo.h  stereodense.cpp  stereodense.h  v4l2stereo.deb
v4l2stereo/Debug/: makefile  objects.mk  subdir.mk
v4l2stereo/deb/DEBIAN/: control
v4l2stereo/elas/: elas.cpp  triangle.cpp
